gcc/testsuite/gcc.dg/noncompile/pr52290.c
/* { dg-error "undeclared here" "" { target *-*-* } 3 } */
/* { dg-error "expected" "" { target *-*-* } 3 } */
int f()[j]
